--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
 
 <div class="container">
-    <header><h1>🎭 Strichmännchen Studio</h1></header>
+    <header><h1>🎭 MP-Comics</h1></header>
 
     <div class="top-bar">
         <div class="stats">
@@ -270,4 +270,5 @@
     renderContent();
 </script>
 </body>
+
 </html>
